Removing all references to the AdMobs banner display.

--- a/CYaPass/Base.lproj/Main.storyboard
+++ b/CYaPass/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -55,16 +55,12 @@
                                         <rect key="frame" x="177.5" y="0.0" width="177.5" height="148"/>
                                         <subviews>
                                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQB-Mu-YrF" userLabel="AddSiteKey">
-                                                <rect key="frame" x="0.0" y="0.0" width="177.5" height="73"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="177.5" height="123"/>
                                                 <state key="normal" title="Add"/>
                                                 <connections>
                                                     <action selector="AddSiteButtonClicked:" destination="9pv-A4-QxB" eventType="touchUpInside" id="I3x-QZ-j2l"/>
                                                 </connections>
                                             </button>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ax5-1a-YPA" customClass="GADBannerView">
-                                                <rect key="frame" x="0.0" y="73" width="177.5" height="50"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYv-5M-lye" userLabel="Delete">
                                                 <rect key="frame" x="0.0" y="123" width="177.5" height="25"/>
                                                 <constraints>
@@ -133,7 +129,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Main" image="first" id="acW-dT-cKf" userLabel="Main"/>
                     <connections>
-                        <outlet property="AdMobs" destination="Ax5-1a-YPA" id="JMG-CR-BzI"/>
                         <outlet property="ClearGridButton" destination="4xs-65-YDB" id="wNS-4h-ild"/>
                         <outlet property="HashLabelOutlet" destination="A5M-7J-77L" id="Rmp-58-vU0"/>
                         <outlet property="ShowPasswordSwitch" destination="Frz-Zv-NPb" id="KeP-um-l3Q"/>
@@ -261,30 +256,18 @@
                                     <constraint firstItem="JR4-Gk-MwZ" firstAttribute="top" secondItem="RTt-7y-vYc" secondAttribute="bottom" constant="49" id="bG9-Go-YHK"/>
                                 </constraints>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uzk-2z-J7y" userLabel="AdView" customClass="GADBannerView">
-                                <rect key="frame" x="27" y="568" width="320" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="8FJ-2K-wuK"/>
-                                    <constraint firstAttribute="height" constant="50" id="Ec1-JQ-Kmu"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cnH-tq-aZu" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="10" id="PVZ-23-Ueq"/>
-                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="Uzk-2z-J7y" secondAttribute="bottom" id="TOa-Xh-BBt"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cnH-tq-aZu" secondAttribute="trailing" constant="5" id="lmZ-2g-iYW" userLabel="trailingMargin = Stack View.trailing + 15"/>
-                            <constraint firstItem="Uzk-2z-J7y" firstAttribute="centerX" secondItem="QS5-Rx-YEW" secondAttribute="centerX" id="rX6-LL-17j"/>
                             <constraint firstItem="cnH-tq-aZu" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" constant="5" id="z95-RV-wjH" userLabel="Stack View.leading = leadingMargin + 15"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="second" id="XS1-XE-NFQ" userLabel="Settings"/>
                     <connections>
-                        <outlet property="AdMobs" destination="Uzk-2z-J7y" id="dMa-31-aYF"/>
                         <outlet property="MaxCharsText" destination="F0W-VW-64X" id="eKz-XN-NwG"/>
                         <outlet property="SpecialCharsText" destination="CGI-re-n6b" id="KRm-70-Sty"/>
-                        <outlet property="SuperView" destination="Uzk-2z-J7y" id="acP-Dw-MpW"/>
                         <outlet property="maxCharsStepper" destination="HzC-rL-Xs4" id="Rqy-BI-lTa"/>
                     </connections>
                 </viewController>
